# python4ds

./: .gitignore  CONFIGURATION_IMPORTS.md  pyproject.toml  pyrightconfig.json  requirements.txt
Dev/Python_0_Starting/: .gitignore
Dev/Python_0_Starting/ex09/: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
Dev/Python_0_Starting/ex09/src/ft_package/: __init__.py  ft_count.py
Dev/Python_2_DataTable/: .gitignore
Dev/Python_3_OOP/: .gitignore
Dev/Tester_0_Starting/: ex04_whatis_tester.sh  ex06_ft_filter_doc_tester.py  ex06_ft_filter_tester.sh  ex07_sos_tester.py  py4ds_starting_tester.sh
Dev/Tester_1_Array/: ex05_pimp_image_tester.py  py4ds_array_tester.sh
Dev/Tester_2_DataTable/: ex00_load_csv_tester.py  py4ds_DataTable_tester.sh
Dev/Tester_3_OOP/: OOP_ex00_tester.py  POOP_concepts.md  Python_3_OOP_ex00_tester.py  Python_3_OOP_ex01_tester.py  Python_3_OOP_ex02_tester.py  Python_3_OOP_ex03_tester.py  Python_3_OOP_ex04_tester.py  S1E7.py  S1E9.py  ft_calculator.py  py4ds_OOP_tester.sh
Dev/Tester_4_Dod/: Python_4_Dod_ex00_tester.py  Python_4_Dod_ex01_tester.py  Python_4_Dod_ex02_tester.py  Python_4_Dod_ex03_tester.py  py4ds_Dod_tester.sh
Documentation/: graphique.eps  lib_datascience_python.md  matplotlib_guide.md  numpy_array.md  numpy_guide.ipynb  package_guide.md  pandas_guide.ipynb  seaborn_guide.md
Documentation/guides/: AUTOCOMPLETION_GUIDE.md  CODES_COULEURS.md  (+6 more)
Formation/: 03_conditions.ipynb  11_numpy_indexing.ipynb  13_numpy_broadcasting.ipynb  14_mathplotlib_bases.ipynb  fichier2.txt  module08.py
Tester/: .gitignore
(+64 files in other folders)
